# bdinfo-rs

./: .convco  .dockerignore  .editorconfig  .gitattributes  .gitignore  .lycheeignore  .yamllint.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIFFERENCES.md  Dockerfile  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  dist-workspace.toml  rust-toolchain.toml  rustfmt.toml  scorecard.yml  taplo.toml  typos.toml
.cargo/: config.toml  mutants.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  build-linux-packages.sh  build-setup.yml  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  output_difference.yml
.github/scripts/: check-banned-words.ps1  source-rules.ps1
.github/workflows/: audit.yml  ci.yml  codeql.yml  conventional.yml  dependency-review.yml  deploy-pages.yml  docker.yml  fuzz.yml  guard-ancestor.yml  homebrew.yml  install-smoke-test.yml  link-check.yml  linux-packages.yml  packages.yml  publish-crates.yml  publish-npm.yml  release.yml  scorecard.yml  toml.yml  toolchain-freshness.yml  version-freshness.yml  wasm.yml  zizmor.yml
crates/bdinfo-rs/: Cargo.toml  README.md  build.rs
crates/bdinfo-rs-core/: Cargo.toml  README.md
crates/bdinfo-rs-core/src/: bdrom.rs  bitstream.rs  bytes.rs  codec.rs  discovery.rs  error.rs  index.rs  language_codes.rs  lib.rs  primitives.rs  report.rs  stream.rs  vfs.rs
crates/bdinfo-rs-core/src/bdrom/: chapters.rs  clpi.rs  disc.rs  interleaved.rs  m2ts.rs  mpls.rs  order.rs
crates/bdinfo-rs-core/src/codec/: aac.rs  ac3.rs  avc.rs  dts.rs  dts_hd.rs  hevc.rs  lpcm.rs  mpa.rs  mpeg2.rs  mvc.rs  pgs.rs  truehd.rs  vc1.rs
crates/bdinfo-rs-core/src/report/: text.rs
crates/bdinfo-rs-core/src/vfs/: fs.rs  udf.rs
crates/bdinfo-rs-core/src/vfs/udf/: cs0.rs  descriptor.rs  fid.rs  icb.rs  source.rs
crates/bdinfo-rs-wasm/: .gitignore  Cargo.toml  deny.toml  wasm-size-budget.txt
crates/bdinfo-rs-wasm/.cargo/: mutants.toml
crates/bdinfo-rs-wasm/src/: lib.rs
crates/bdinfo-rs-wasm/tests/: golden_report.txt  parity.rs
crates/bdinfo-rs-wasm/web/: .gitignore  README.md  _headers  biome.json  build.mjs  check-size.mjs  demo.html  dev.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.worker.json
crates/bdinfo-rs-wasm/web/src/: analyze.ts  demo.ts  worker.ts
crates/bdinfo-rs-wasm/web/test/: harness.html  parity.chrome.mjs  parity.node.mjs
crates/bdinfo-rs/debian/: copyright
crates/bdinfo-rs/src/: cli.rs  main.rs
crates/bdinfo-rs/tests/: cli.rs
crates/bdinfo-rs/tests/fixtures/: BigBuckBunny.iso  README.md
crates/bdinfo-rs/tests/fixtures/BigBuckBunny/BDMV/BACKUP/: index.bdmv
crates/bdinfo-rs/tests/fixtures/BigBuckBunny/BDMV/BACKUP/CLIPINF/: 00000.clpi
crates/bdinfo-rs/tests/fixtures/BigBuckBunny/BDMV/CLIPINF/: 00000.clpi
crates/bdinfo-rs/tests/fixtures/BigBuckBunny/BDMV/PLAYLIST/: 00000.mpls
crates/bdinfo-rs/tests/fixtures/BigBuckBunny/BDMV/STREAM/: 00000.m2ts
crates/bdinfo-rs/tests/fixtures/golden/: folder.txt  iso.txt
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/bitstream/: garbage
fuzz/corpus/codec/: aac_mpeg4_lc_48k  ac3_5_1_dn31  avc_high_4_1  dts_core  dts_hd_ma  dts_hd_secondary  eac3_plus  hevc_hdr10_main10  hevc_sps_ref_pic_set_runaway  mpa_mpeg1_l3_128k  mvc_stub  pgs_ods_caption  pgs_pcs_1080
fuzz/corpus/discovery/: garbage  m2ts  mpls
fuzz/corpus/m2ts/: ssif_interleaved_two_extents
fuzz/corpus/mpls/: magic_only
fuzz/corpus/parse_report/: magics  xml_only
fuzz/corpus/read_be/: garbage
fuzz/corpus/udf/: avdp_sector256  nsr03_sector17
fuzz/fuzz_targets/: bitstream.rs  clpi.rs  codec.rs  discovery.rs  m2ts.rs  mpls.rs  parse_report.rs  read_be.rs  source.rs  udf.rs
packaging/aur/: PKGBUILD.template
supply-chain/: audits.toml  config.toml
