[package]
name = "bdinfo-rs-wasm"
version = "1.0.1"
publish = false
edition = "2024"
rust-version = "1.96"
license = "LGPL-2.1-only"
authors = ["bdinfo-rs contributors"]
repository = "https://github.com/agentjp/bdinfo-rs"
description = "WebAssembly browser bindings for the bdinfo-rs Blu-ray analyzer (full measured scan)."

# INDEPENDENT workspace — keeps wasm-bindgen + web-sys (and the `unsafe` glue the
# `#[wasm_bindgen]` macro emits) OUT of the main workspace's gate and out of the
# `forbid(unsafe_code)` posture of crates/bdinfo-rs{-core,}. The root Cargo.toml
# also `exclude`s this directory (exactly like `fuzz/`).
[workspace]

[lib]
# `cdylib` is the wasm artifact wasm-bindgen post-processes; `rlib` lets the
# native parity test link the crate and call the export directly.
crate-type = ["cdylib", "rlib"]

[dependencies]
bdinfo-rs-core = { path = "../bdinfo-rs-core" }
# All-target: `#[wasm_bindgen]` on `scan_report` expands on every target (the
# native rlib parity test links it), so the macro crate must be present natively.
wasm-bindgen = "0.2"

# js-sys / web-sys are referenced ONLY under #[cfg(target_arch = "wasm32")] (the
# WebReader/WebFile FileReaderSync seam + scan_files/build_web_tree), so they are
# wasm-only — a native `cargo build` / parity build never compiles them.
# `File`/`Blob`/`FileReaderSync` back the streaming `scan_files` seam: synchronous
# byte-offset reads in a Worker (no JSPI/Asyncify); `console` is the scan log.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "File", "FileReaderSync", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Size-tuned, mirroring the CLI's shipped binary: the browser payload should be
# as small as the analyzer's single static binary is.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Calibrated lint gate — PROPORTIONATE, not the core's posture. This crate is the
# thin browser shim that lives OUTSIDE the workspace `forbid(unsafe_code)` bar
# (wasm-bindgen's generated glue + the one `unsafe impl Send` need it), so:
#   - `unsafe_code` is ALLOWED here (and ONLY here);
#   - clippy `all` + `pedantic` are denied (a real bar), with a SHORT allow-list
#     for the lints that are intrinsic to the JS/web boundary rather than bugs.
# `nursery` is deliberately left off (unstable + noisy — calibration, not laxity).
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Web APIs take/return byte offsets as `f64` and js_sys lengths as `u32`; every
# crossing here is bounded by the surrounding `saturating_*`/`min` arithmetic, so
# the cast itself is not where truncation/precision/sign would bite.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# `#[wasm_bindgen]` exports must take their args by value — the generated ABI
# moves them across the JS boundary.
needless_pass_by_value = "allow"
