[package]
name = "bdinfo-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "bdinfo-rs — a memory-safe command-line Blu-ray analyzer (no GUI)."
readme = "README.md"
keywords = ["bluray", "bdmv", "m2ts", "cli", "video"]
categories = ["command-line-utilities", "multimedia::video"]

# Keep the ~6 MB real-disc test fixtures out of the published crate — they exist
# only for the repo's CI (the end-to-end scan in tests/cli.rs) and are useless to
# anyone installing from crates.io. `cargo install`/`publish` build the binary, not
# the integration tests, so excluding them doesn't affect the build; tests/cli.rs
# itself is tiny and stays.
exclude = ["tests/fixtures/"]

# The binary is named `bdinfo-rs`, same as this crate (the library lives in the
# separate `bdinfo-rs-core` crate).
[[bin]]
name = "bdinfo-rs"
path = "src/main.rs"

[lints]
workspace = true

# cargo-machete (the `mc` gate step) does not scan build.rs, so it can't see that
# these build-dependencies are used there to generate the completions + man page,
# and false-flags them as unused. cargo-shear (`sh`), which DOES analyze build.rs,
# confirms they are used — so this ignore is a scanner blind spot, not a real
# unused dep. clap itself is also a [dependencies] entry used by the binary, so it
# needs no ignore.
[package.metadata.cargo-machete]
ignored = ["clap_complete", "clap_mangen"]

# cargo-binstall: fetch the prebuilt archives this repo already ships (cargo-dist
# names them `bdinfo-rs-<target-triple>.<ext>`, with NO version in the filename)
# instead of compiling from source. The unix `.tar.gz` archives wrap their files
# in a `bdinfo-rs-<triple>/` directory, so the default `bin-dir` reaches inside it;
# the Windows `.zip` archives are FLAT (binary at the archive root), so the two
# windows targets override `bin-dir` to just the binary name.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
bin-dir = "{ bin }{ binary-ext }"

# cargo-deb (`.deb` packaging). The `packages.yml` deb job runs `cargo deb
# --no-build --target <triple>` over the prebuilt musl binary it stages at
# `target/<triple>/release/bdinfo-rs` — cargo-deb special-cases the `target/release/`
# asset prefix to that path and derives the Debian arch from `--target`. The
# completion/man assets are staged under the crate's `release-assets/`. The static
# musl binary has no shared-library deps, so `depends` is emptied.
#
# Debian packages carry NO license field in their `control` metadata — by policy the
# license lives only in the DEP-5 `/usr/share/doc/<pkg>/copyright` file. cargo-deb
# auto-generates a MINIMAL header-only copyright (no `Files:` stanza), which license
# scanners/registries (e.g. Cloudsmith) skip → "no license data" (the .rpm is fine
# because RPM has a first-class `License:` tag). So we ship our own complete, machine-
# readable `debian/copyright` (header + `Files: *` `License: LGPL-2.1-only` stanza +
# the license paragraph) as the canonical-path asset; cargo-deb uses it verbatim
# instead of generating one. The path is resolved relative to this crate dir.
[package.metadata.deb]
maintainer = "bdinfo-rs contributors <bdinfo-rs@users.noreply.github.com>"
section = "utils"
priority = "optional"
depends = ""
extended-description = "A memory-safe, statically-linked command-line Blu-ray disc analyzer — a drop-in replacement for the classic BDInfo report tool. Scans BDMV folders and .iso images and renders the classic per-stream video/audio technical report."
assets = [
    ["target/release/bdinfo-rs", "usr/bin/", "755"],
    ["debian/copyright", "usr/share/doc/bdinfo-rs/copyright", "644"],
    ["release-assets/bdinfo-rs.1", "usr/share/man/man1/", "644"],
    ["release-assets/bdinfo-rs.bash", "usr/share/bash-completion/completions/bdinfo-rs", "644"],
    ["release-assets/_bdinfo-rs", "usr/share/zsh/site-functions/", "644"],
    ["release-assets/bdinfo-rs.fish", "usr/share/fish/vendor_completions.d/", "644"],
]

# cargo-generate-rpm (`.rpm` packaging). The `packages.yml` rpm job mirrors the deb
# job: it rewrites the `target/release/` asset prefix to `target/<triple>/release/`
# under `--target` and derives the arch from the triple. `auto-req = "no"` because
# the static musl binary pulls in no shared-library requirements.
[package.metadata.generate-rpm]
auto-req = "no"
assets = [
    { source = "target/release/bdinfo-rs", dest = "/usr/bin/bdinfo-rs", mode = "755" },
    { source = "release-assets/bdinfo-rs.1", dest = "/usr/share/man/man1/bdinfo-rs.1", mode = "644" },
    { source = "release-assets/bdinfo-rs.bash", dest = "/usr/share/bash-completion/completions/bdinfo-rs", mode = "644" },
    { source = "release-assets/_bdinfo-rs", dest = "/usr/share/zsh/site-functions/_bdinfo-rs", mode = "644" },
    { source = "release-assets/bdinfo-rs.fish", dest = "/usr/share/fish/vendor_completions.d/bdinfo-rs.fish", mode = "644" },
]

[dependencies]
bdinfo-rs-core = { workspace = true }
clap = { workspace = true }
crossterm = { version = "0.29.0", default-features = false, features = ["windows"] }

# Build-time ONLY — these never link into the shipped binary (they generate the
# shell completions + man page in build.rs from the same `src/cli.rs` the binary
# uses). All pure Rust (no C / FFI), so the single-static-binary guarantee and
# the `cdeps` gate are untouched. clap is shared through the workspace pin so the
# generated artifacts match the binary's clap exactly.
[build-dependencies]
clap = { workspace = true }
clap_complete = "4.6"
clap_mangen = "0.3"
